# apogee

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
apogee-backend/: MANIFEST.in  README.md  app.py  package-lock.json  package.json  pyproject.toml  requirements.txt
apogee-backend/apogee/: app.py  cli.py  config.py  security.py
apogee-backend/apogee/models/: request_models.py
apogee-backend/apogee/prompts/: answer.txt  summarize.txt
apogee-backend/apogee/routes/: health.py  pdf.py  summarize.py
apogee-backend/apogee/services/: chunk_service.py  llm_service.py  pdf_service.py  prompt_service.py  summary_service.py
apogee-backend/apogee/utils/: cleaner.py
apogee-backend/apogee_browser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
apogee-backend/models/: request_models.py
apogee-backend/prompts/: summarize.txt  synthesize.txt
apogee-backend/routes/: health.py  pdf.py  summarize.py
apogee-backend/services/: chunk_service.py  llm_service.py  mistral_service.py  pdf_service.py  prompt_service.py  summary_service.py
apogee-backend/src/: app.js  config.js
apogee-backend/src/models/: requestSchemas.js
apogee-backend/src/prompts/: suggest_questions.txt
apogee-backend/src/routes/: health.js  pdf.js  summarize.js
apogee-backend/src/services/: chunkService.js  llmService.js  pdfService.js  promptService.js  summaryService.js
apogee-backend/tests/: chunkService.test.js  cleaner.test.js  config.test.js  ipv4.test.js  pdfRoute.test.js  pdfService.test.js  promptService.test.js  summarizeRoute.test.js  summaryService.test.js  test_pdf.py  test_summarize.py  test_summary_service.py
apogee-backend/utils/: cleaner.py
(+63 files in other folders)
