[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "apogee-browser"
version = "0.1.0"
description = "Local-first browser assistant powered by Ollama"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi==0.116.1",
    "uvicorn[standard]==0.35.0",
    "requests==2.32.4",
    "python-multipart==0.0.20",
    "pymupdf==1.25.5",
    "ollama==0.5.1",
    "pydantic==2.11.7",
]

[project.scripts]
apogee = "apogee.cli:main"

[tool.setuptools.packages.find]
where = ["."]
