[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "apogee-browser"
version = "0.1.1"
description = "Local-first browser assistant powered by Ollama"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34",
    "requests>=2.31",
    "python-multipart>=0.0.18",
    "pymupdf>=1.25",
    "ollama>=0.4,<1",
    "pydantic>=2.10,<3",
]

[project.scripts]
apogee = "apogee.cli:main"

[tool.setuptools.packages.find]
where = ["."]
